@@ -44,5 +44,4 @@ PQXX_HAVE_UNIQUE_PTR	public	compiler
 PQXX_SEEKDIRS_MATCH_C	internal	compiler
 PQXX_PQ_IN_NAMESPACE	public	compiler
 PQXX_SELECT_ACCEPTS_NULL	internal	compiler
-PQXX_TR1_HEADERS	public	compiler
 VERSION	internal	autotools
